Fixed alignment for save changes buttons in settings

--- a/SmsFeedback_Take4/Content/css/settings.css
+++ b/SmsFeedback_Take4/Content/css/settings.css
@@ -76,7 +76,15 @@ color: white;*/
    font-weight: bold;
    font-size: 16px;
    cursor: pointer;
-   float:right;
+ 
+}
+
+.alignRight {
+     float:right;
+}
+
+.alignLeft {
+   float:left;
 }
 
 #changePasswordSucceededContainer {
